remove supabase
